--- a/paper/sections/related_work.tex
+++ b/paper/sections/related_work.tex
@@ -1,18 +1,18 @@
 \section{Related Work}
-The structure and dynamics of individual and collective contributions have since long been recognized by researchers as primary factors for the achievement of high quality content, starting with scientific publications \cite{newman2001} and open collaboration projects \cite{bryant2005}. In the meantime, some of these open collaboration projects have tremendously increased their size and the number of their contributors, making it hard to assess the value of each knowledge artifact, even by intensive peer-review. The Wikipedia community, as well as researchers, have tried to find ways to determine article quality and editor expertise in a systematic way. These approaches have systematically faced criticism. Since 2005 many quality article metrics have been proposed from methods based on word count \cite{blumenstock2008sizematters}, the general structure of articles \cite{wang2013tell}, the revision history \cite{hu2007articlequality}, the patterns of changes between article versions \cite{woehner2009}, and combinations of type and volume of edits and editor expertise \cite{kane2011}. Editor expertise has also been investigated by considering the total number of words edited, the number of edits made, or the longevity of edits \cite{adler2008measuringauthor}, as well as time spent making edit sessions \cite{geiger2013}, or even the number of barnstars collected \cite{Kriplean2008}. More specific features of editors received the attention of researchers, such as creative editing \cite{iba2010}, how power editors differ from normal editors \cite{panciera2009}, and the influence of the type of contributors on the quality of articles \cite{stein2007}.
+The structure and dynamics of individual and collective contributions have long since been recognized by researchers as primary factors for the achievement of high quality content, starting with scientific publications \cite{newman2001} and open collaboration projects \cite{bryant2005}. In the meantime, some of these open collaboration projects have tremendously increased their size and the number of their contributors, making it hard to assess the value of each knowledge artifact, even by intensive peer-review. The Wikipedia community, as well as researchers, have tried to find ways to determine article quality and editor expertise in a systematic way. These approaches have systematically faced criticism. Since 2005 many quality article metrics have been proposed from methods based on word count \cite{blumenstock2008sizematters}, the general structure of articles \cite{wang2013tell}, the revision history \cite{hu2007articlequality}, the patterns of changes between article versions \cite{woehner2009}, and combinations of type and volume of edits and editor expertise \cite{kane2011}. Editor expertise has also been investigated by considering the total number of words edited, the number of edits made, the longevity of edits \cite{adler2008measuringauthor}, the time spent in edit sessions \cite{geiger2013}, and the number of barnstars collected \cite{Kriplean2008}. Other features of editors that have received the attention of researchers are creative editing \cite{iba2010}, how power editors differ from normal editors \cite{panciera2009}, and the influence of the type of contributors on the quality of articles \cite{stein2007}.
 
 The effort to measure article quality and editor expertise has extended to predicting the quality of contributions \cite{druck2008learning,zeng2006computingtrust}, developing reputation systems for editors \cite{adler2007contentdriven}, and identifying editor candidates for promotion \cite{burke2008taking}.
 
 %\textcolor{red}{I think we can delete this paragraph, its off topic.}
 %In contrast, the difficulty to assess the quality of artifacts and the expertise of editors differs with the ease to make the same evaluation with software code which can be compiled and tested. In a Matlab experiment for solving NP-hard problems, it was found that work shared as a public good helps individuals quickly reuse existing results, and thus, find better algorithms \cite{gulley2010}. Source code submissions by individuals programmers were tested and benchmarked for their capacity to solve the assigned problem quickly, by executing the compiled code on a computer. Unfortunately, for the time being, this approach is exclusively feasible for machine executable knowledge (i.e. software code) and in highly controlled environments.
 
-We believe that the general skepticism about these metrics and reputation systems is grounded in their inability to capture and make sense of coordination between contributors. Coordination defined as an on-going process that produces other measurable outcomes, is in general hard to understand in societies \cite{ostrom1990}. CSCW researchers have been specifically concerned with coordination viewed as a feature of a community - the effect of more peers on output quality. So while coordination process is always happening, by default we will talk of coordination as a feature, and say that a community is more coordinated if increased participation relates to higher quality. In particular, Wikipedia has been a heavily explored ``field" of studies for social scientists, starting with concerns on the effects of peer-review and whether single or repeated contributions by editors would help improve the quality of articles \cite{hu2007articlequality,wilkinson2007}. While collaboration and additional review by peers is generally perceived as positive, depending on the type of tasks and their required coordination, performance can also be undermined by inadequate coordination processes \cite{kittur2009coordination} which would lead to a negative coordination feature. On the contrary, the effects of diversity on group productivity seem to increase group productivity \cite{chen2010}. It was also found that editors cluster by interest, with higher coordinated efforts in densely populated clusters \cite{jesus2009}. 
+We believe that the general skepticism about these metrics and reputation systems is grounded in their inability to capture and make sense of coordination between contributors. Coordination defined as an on-going process that produces other measurable outcomes, is in general hard to understand in societies \cite{ostrom1990}. CSCW researchers have been specifically concerned with coordination viewed as a feature of a community - the effect of more peers on output quality. So while coordination process is always happening, by default we will talk of coordination as a feature, and say that a community is more coordinated if increased participation relates to higher quality. While collaboration and additional review by peers is generally perceived as positive, depending on the type of tasks and their required coordination, performance can also be undermined by inadequate coordination processes \cite{kittur2009coordination} which would lead to a negative coordination feature. On the contrary, the effects of diversity on group productivity seem to increase group productivity \cite{chen2010}. It was also found that editors cluster by interest, with higher coordinated efforts in densely populated clusters \cite{jesus2009}. In particular, Wikipedia has been a heavily explored ``field" of studies for social scientists, starting with concerns on the effects of peer-review and whether single or repeated contributions by editors would help improve the quality of articles \cite{hu2007articlequality,wilkinson2007}. 
 
-As a hybrid example, the specific problem of coordination in ``featured" articles, which are heavily contributed over short time periods, has raised concerns on implicit versus explicit coordination processes and the limited positive quality it can bring when editors are too numerous \cite{kittur2008}.
+As a hybrid example, the specific problem of coordination in ``featured" Wikipedia articles, which are heavily contributed over short time periods, has raised concerns on implicit versus explicit coordination processes and the limited positive quality it can bring when editors are too numerous \cite{kittur2008}.
  
-The connection between article quality and editor expertise is present in nearly all literature aiming to understand the effects of coordination on the value of Wikipedia articles. The typical structure of networks with edges that connect uniquely two kinds of nodes is called {\it bi-partite} \cite{newman2001}. The analysis of patterns in Wikipedia bi-partite networks confirmed the existence of overlapping cliques of densely connected articles and editors  \cite{jesus2009}. A more detailed analysis of medical and health-related articles on Wikipedia, showed that the position of articles in the bi-partite network of articles and editors significantly influenced its quality \cite{kane2009}. 
+The connection between article quality and editor expertise is present in nearly all literature aiming to understand the effects of the coordination process on the value of Wikipedia articles. The typical structure of networks with edges that connect uniquely two kinds of nodes is called {\it bi-partite} \cite{newman2001}. The analysis of patterns in Wikipedia bi-partite networks - with editors being one node type and articles the other - confirmed the existence of overlapping cliques of densely connected articles and editors  \cite{jesus2009}. A more detailed analysis of medical and health-related articles on Wikipedia, showed that the position of articles in the bi-partite network of articles and editors significantly influenced its quality \cite{kane2009}. 
 
-Recent developments in the science of bi-partite networks has shown the feasibility to rank entities of each type through a recursive algorithm called  {\it method of reflections}.This method has been tested on the bi-partite network of countries competing for exporting products \cite{hidalgo2007,hidalgo2009}. The model of reflections has been improved and complemented in more recent work, mainly to improve its robustness \cite{tacchella2012new, cristelli2012competitors, tacchella2013economic, cristelli2013measuring}. Caldarelli et al. \cite{caldarelli2012network} have proposed an alternative method, based on biased stochastic Markov chains, which helps further understand the mutual influence between nodes in bi-partite networks.
+Recent developments in the science of bi-partite networks has shown the feasibility to rank entities of each type through a recursive algorithm called  {\it method of reflections}.This method has been tested on the bi-partite network of countries exporting products \cite{hidalgo2007,hidalgo2009}. The method of reflections has been improved and complemented in more recent work, mainly to improve its robustness \cite{tacchella2012new, cristelli2012competitors, tacchella2013economic, cristelli2013measuring}. Caldarelli et al. \cite{caldarelli2012network} have proposed an alternative method, based on biased stochastic Markov chains, which helps further understand the mutual influence between nodes in bi-partite networks.
 
 
 
