--- a/paper/cscw/cscw2015.tex
+++ b/paper/cscw/cscw2015.tex
@@ -108,10 +108,9 @@ John Chuang\\
 \input{../sections/abstract.tex}
 
 %\textcolor{red}{The following section is mandatory for accepted papers, but not needed for submissions for the June 1 deadline.}
-\keywords{{\bf open collaboration; bi-partite networks; performance; coordination}}
-
 \category{H.5.3}{[Information Systems]: Group and Organization Interfaces}{computer-supported collaborative work}
 
+\keywords{open collaboration; bi-partite networks; performance; coordination}
 %See: \url{http://www.acm.org/about/class/1998/}
 %for more information and the full list of ACM classifiers
 %and descriptors. 
